Release Notes

* 5/2/2017
  * changed AtlasPJB for unified PQs

* 4/28/2017
  * fixed brokerage for git rel

* 4/25/2017
  * fake co-jumbo

* 4/24/2017
  * resource_type tagging

* 4/14/2017
  * added noExecStrCnv

* 4/11/2017
  * added throttleJobsInPausedTasks

* 4/5/2017
  * added pseudo output dataset

* 3/27/2017
  * changed AtlasAPP to extend lifetime of user output datasets

* 3/2/2017
  * added esFraction

* 2/22/2017
  * fixed generateBuildJob for nightlies
  * changed AtlasTS to make duble copy for users

* 2/20/2017
  * changed AtlasPTB for task.nucleus=satellite
  * added respectSplitRule
  * added indexConsistent

* 2/7/2017
  * added DISK_THRESHOLD_xyz in AtlasPTB

* 1/31/2017
  * removed dq2 dependency
  * changed not to change oldstatus when throttled->paused
  * fixed eventRatio for nSecond % nMaster != 0

* 1/13/2017
  * introduced GROUPBYATTR in getTasksToBeProcessed

* 1/12/2017
  * fixed for incexec with input containers

* 12/20/2016
  * changed setScoutJobData to set exhausted when task_ramCount<4GB and scout_ramCount>4GB

* 12/15/2016
  * added nQueueCap
  * added mergeEsAtOS

* 12/9/2016
  * added nRunningCap to AtlasPJT
  * disabled setDEL in AtlasPP

* 12/5/2016
  * increased scout priority to 901

* 12/1/2016
  * changed AtlasPWD to boost task priorities at 95%
  * fixed AtlasAJB and JG to support cmake-based nightlies

* 11/28/2016
  * fixed setScout to propagate exhausted to DEFT

* 11/24/2016
  * changed AtlasPJB not to use baseramcount for pmerge
  * disabled transfer backlog check when negative T1 weight in AtlasPTB
  * changed thresholds for data availability check configurable in AtlasPTB

* 11/22/2016
  * fixed AtlasAJB to use configurator tables instead of schedconfig.space

* 11/16/2016
  * changed AtlasAW to use PRESTAGE_LIMIT
  * added a hint to setDelFlag
  * using 1 for negative ramCount
  * fixed AtlasPJB for no-input tasks

* 11/14/2016
  * changed outDiskCount not to scale with workDiskCount

* 11/9/2016